--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 
       <div class="hero-stats">
         <div class="stat">
-          <span class="number">4+</span>
-          <span class="label">Projects</span>
+          <span class="number">1</span>
+          <span class="label">Project</span>
         </div>
         <div class="stat">
           <span class="number">1</span>
@@ -357,4 +357,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
