--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <p class="description">Building accessible, performant web experiences with modern technologies</p>
           <div class="hero-actions">
             <a class="btn primary" href="#portfolio">View Work</a>
-            <a class="btn outline" href="documents/resume.pdf" download="Lakshman_Resume.pdf">Download Resume.pdf</a>
+            <a class="btn outline" href="documents/Resume.pdf" download="Lakshman_Resume.pdf">Download Resume.pdf</a>
           </div>
         </div>
       </div>
@@ -78,7 +78,7 @@
       <div class="hero-stats">
         <div class="stat">
           <span class="number">1</span>
-          <span class="label">Project</span>
+          <span class="label">Projects</span>
         </div>
         <div class="stat">
           <span class="number">1</span>
@@ -106,14 +106,14 @@
         <div class="split">
           <div class="content">
             <h2>About Me</h2>
-            <p>Frontend developer focused on accessible, performant interfaces. I build with HTML, CSS, JS and integrate LLMs for smarter UX.</p>
+            <p>I’m an ECE student and a frontend developer who loves building clean, modern, and high-performance web experiences. I work with HTML, CSS, and JavaScript, and I also explore AI integration to create smarter, personalised applications.<br><br>I enjoy learning new technologies, improving UI/UX design, and developing projects that blend creativity with real-world functionality. Along with web development, I also work on electronics concepts such as PCB design, embedded systems, and basic VLSI design.</p>
             <ul class="chips">
-              <li>React</li><li>Streamlit</li><li>LLM Integration</li><li>Figma</li>
+              <li>PCB Design (Altium Designer)</li><li>Basics of VLSI (Verilog)</li><li>Frontend Development</li><li>Figma</li>
             </ul>
           </div>
-          <div class="visual">
-            <div class="mini-card glass neon-ghost">EduChat AI • LLaMA + ChromaDB</div>
-          </div>
+          <!-- <div class="visual">
+            <div class="mini-card glass neon-ghost">Core Project</div>
+          </div> -->
         </div>
       </section>
 
@@ -126,8 +126,8 @@
             <div class="timeline">
               <div class="timeline-item">
                 <span class="date">2023 - Present</span>
-                <strong>B.Tech — ECE</strong>
-                <p>Chalapathi Institute of Engineering and Technology</p>
+                <strong>B.Tech — Electronics and Communication Engineering</strong>
+                <p>7.5 CGPA<br>Chalapathi Institute of Engineering and Technology</p>
               </div>
             </div>
           </article>
@@ -145,6 +145,7 @@
         </div>
 
         <h3 class="skills-heading">Skills</h3>
+        <p>I work with a wide range of modern web technologies and tools. My strengths include building responsive UI layouts, writing clean and maintainable code, and integrating AI-powered features into web applications. I focus on performance, accessibility, and delivering smooth user experiences across devices.</p>
         <div id="skills" class="skills-container">
           <div class="skills-grid">
             <div class="skill-card">
@@ -155,6 +156,7 @@
               <div class="skill-bar">
                 <div class="skill-progress" data-percent="90" style="width: 0"></div>
               </div>
+              <p>Strong understanding of semantic structure, accessibility, SEO-friendly markup, and modern web standards.</p>
             </div>
 
             <div class="skill-card">
@@ -165,6 +167,7 @@
               <div class="skill-bar">
                 <div class="skill-progress" data-percent="70" style="width: 0"></div>
               </div>
+              <p>Skilled in responsive layouts, animations, grid/flexbox, and creating clean UI components with modern styling patterns.</p>
             </div>
 
             <div class="skill-card">
@@ -175,6 +178,7 @@
               <div class="skill-bar">
                 <div class="skill-progress" data-percent="70" style="width: 0"></div>
               </div>
+              <p>Experience building interactive interfaces, DOM manipulation, API integration, and event-driven UI behavior.</p>
             </div>
 
             <div class="skill-card">
@@ -185,6 +189,7 @@
               <div class="skill-bar">
                 <div class="skill-progress" data-percent="80" style="width: 0"></div>
               </div>
+              <p>Comfortable building scripts, backend logic, AI integrations, and API endpoints.</p>
             </div>
 
             <div class="skill-card">
@@ -195,6 +200,7 @@
               <div class="skill-bar">
                 <div class="skill-progress" data-percent="85" style="width: 0"></div>
               </div>
+              <p>Build fast, interactive AI dashboards, data apps, and prototypes with clean UI.</p>
             </div>
 
             <div class="skill-card">
@@ -205,6 +211,7 @@
               <div class="skill-bar">
                 <div class="skill-progress" data-percent="75" style="width: 0"></div>
               </div>
+              <p>Hands-on experience integrating models like LLaMA and ChatGPT into real applications, including chatbots, smart UI automation, and campus-related AI tools.</p>
             </div>
           </div>
         </div>
@@ -232,7 +239,7 @@
               <div class="portfolio-tags">
                 <span class="tag">AI Project</span>
               </div>
-              <p>A smart campus chatbot that answers academic & campus queries.</p>
+              <p>Campus AI assistant built using LLaMA and ChromaDB for answering academic questions, accessing department information, and improving student-faculty communication.</p>
             </div>
           </article>
 
@@ -248,7 +255,7 @@
               <div class="portfolio-tags">
                 <span class="tag">Web</span>
               </div>
-              <p>Responsive portfolio with dark/light mode and performance best practices.</p>
+              <p>A fully responsive portfolio engineered with clean visual hierarchy, refined UI components, and performance-first coding standards. Built to deliver a seamless browsing experience across all devices.</p>
             </div>
           </article>
         </div>
@@ -357,5 +364,4 @@
 
   <script src="script.js"></script>
 </body>
-
 </html>
